# xor_singleheader

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: msys2.yml  ubuntu.yml
benchmarks/: CMakeLists.txt  bench.c  query.c  spaceusage.c
include/: binaryfusefilter.h  fusefilter.h  xorfilter.h
tests/: CMakeLists.txt  a.c  b.c  unit.c
tests/installation_tests/find/: CMakeLists.txt
